@@ -314,6 +314,7 @@ POWERDOWNFLAG "@POWERDOWNFLAG@"
 # NOTIFYMSG NOCOMM	"UPS %s is unavailable"
 # NOTIFYMSG NOPARENT	"upsmon parent process died - shutdown impossible"
 # NOTIFYMSG CAL		"UPS %s: calibration in progress"
+# NOTIFYMSG NOTCAL	"UPS %s: calibration finished"
 # NOTIFYMSG OFF		"UPS %s: administratively OFF or asleep"
 # NOTIFYMSG NOTOFF	"UPS %s: no longer administratively OFF or asleep"
 # NOTIFYMSG BYPASS	"UPS %s: on bypass (powered, not protecting)"
