@@ -242,6 +242,8 @@ NOPARENT;; `upsmon` parent process died - shutdown impossible
 
 CAL;; UPS calibration in progress
 
+NOTCAL;; UPS calibration finished
+
 OFF;; UPS administratively OFF or asleep
 
 NOTOFF;; UPS no longer administratively OFF or asleep
