@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3282 utf-8
+personal_ws-1.1 en 3283 utf-8
 AAC
 AAS
 ABI
@@ -778,6 +778,7 @@ NONUT
 NOP
 NOPARENT
 NOTBYPASS
+NOTCAL
 NOTIFYCMD
 NOTIFYFLAG
 NOTIFYFLAGS
