@@ -49,6 +49,10 @@ https://github.com/networkupstools/nut/milestone/10
    * dstate machinery: a segmentation fault (null pointer dereference) was
      possible with `INSTCMD` processing of commands without parameters nor
      `TRACKING` identifier. [#2155]
+   * `upsmon` recognition of `CAL` state could linger after the calibration
+     activity was completed by the hardware, which led to mis-processing of
+     shutdown triggers. Also, notification was added to report "finished
+     calibration". [issue #2168, PR #2169]
 
  - nut-usbinfo.pl, nut-scanner and libnutscan:
    * USB VendorID:ProductID support list files generated by the script for
